--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+ <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.12.4</version>
+            <configuration>
+                <argLine>-Xmx1024m</argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
+
   <groupId>com.velan</groupId>
   <artifactId>Testsample</artifactId>
   <version>0.0.1-SNAPSHOT</version>
