--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M5</version> <!-- or the latest version -->
+  </plugin>
+
+
   <name>Testsample</name>
   <url>http://maven.apache.org</url>
 
